--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to RCafe</h1>
-<p>이 페이지는 "RCafe 프로젝트"의 Welcome 페이지입니다.</p>
+<h2>레일스카페<small>에 오신 것을 환영합니다.</small></h2>
+<p>: 본 서비스는 "초보자를 위한 레일스 가이드라인"의 샘플 프로젝트입니다.</p>
+<br />
+<%= link_to "글작성", posts_path, class:'btn btn-default' %>
