--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,9 +13,9 @@
       <tr>
         <td><%= post.title %></td>
         <td>
-          <%= link_to 'Show', post, class: 'btn btn-default' %>
-          <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-default' %>
-          <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default' %>
+          <%= link_to 'Show', [post.bulletin, post], class:'btn btn-default' %>
+          <%= link_to 'Edit', edit_bulletin_post_path(post.bulletin, post), class:'btn btn-default' %>
+          <%= link_to 'Destroy', [post.bulletin, post], method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default' %>
         </td>
       </tr>
     <% end %>
@@ -23,4 +23,4 @@
 </table>
 
 
-<%= link_to 'New Post', new_post_path, class: 'btn btn-default' %>
+<%= link_to 'New Post', new_bulletin_post_path, class: 'btn btn-default' %>
