--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,4 +4,4 @@
 
 <hr>
 
-<%= link_to 'Back', posts_path, class: 'btn btn-default' %>
+<%= link_to 'Back', bulletin_posts_path, class: 'btn btn-default' %>
