--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,6 @@
-<h2>New post</h2>
+<h2><%= bulletin_name params[:bulletin_id] %></h2>
 
 <%= render 'form' %>
 
 <hr>
-
 <%= link_to 'Back', bulletin_posts_path, class: 'btn btn-default' %>
