flash 메시지 표시하기

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,8 @@
 
     <div class="container">
 
+      <%= render partial: "shared/flash_messages", flash: flash %>
+
       <%= yield %>
 
     </div> <!-- /container -->
