--- a/app/views/posts/post_types/_blog.html.erb
+++ b/app/views/posts/post_types/_blog.html.erb
@@ -2,7 +2,7 @@
 
 <% @posts.each do | post | %>
     <div class='post'>
-      <div class='title'><%= post.title %></div>
+      <td><%= post.title %> <small>( <%= post.comments.size %> )</small></td>
       <div class='content'><%= simple_format post.content %></div>
       <div>
           <%= link_to 'Show', [post.bulletin, post], class:'btn btn-default' %>
