--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,6 +9,16 @@
   <th>Content</th>
   <td><%= @post.content %></td>
 </tr>
+<% if @post.bulletin.post_type == "gallery" %>
+  <tr>
+    <th>Picture</th>
+    <td><%= image_tag @post.picture_url %></td>
+  </tr>
+<% end %>
+<tr>
+  <th>Tag list</th>
+  <td><%= tag_icons @post.tag_list %></td>
+</tr>
 <tr>
   <th>Created at</th>
   <td><%= @post.created_at %></td>
